force-app/main/default/objects/Contact/fields/Assignment_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Assignment_End_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Assignment - End Date</label>
    <type>Date</type>
</CustomField>