force-app/main/default/objects/Contact/fields/COVID_Diagnosis_Date__c.field-meta.xml
<CustomField>
    <fullName>COVID_Diagnosis_Date__c</fullName>
    <description>Enter the date of positive diagnosis for COVID-19</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the date of positive diagnosis for COVID-19</inlineHelpText>
    <label>COVID Diagnosis Date</label>
    <type>Date</type>
</CustomField>