force-app/main/default/objects/Contact/fields/Exposure_Symptoms_Date__c.field-meta.xml
<CustomField>
    <fullName>Exposure_Symptoms_Date__c</fullName>
    <description>Enter the date of symptoms first reported or date of exposure to COVID-19 positive individual</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Exposure/Symptoms Date</label>
    <type>Date</type>
</CustomField>