force-app/main/default/objects/Contact/fields/Medical_Staff_Category__c.field-meta.xml
<CustomField>
    <fullName>Medical_Staff_Category__c</fullName>
    <label>Medical Staff Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Consulting</fullName>
            </value>
            <value>
                <fullName>Provisional</fullName>
            </value>
            <value>
                <fullName>Locum Tenens</fullName>
            </value>
            <value>
                <fullName>Clinical Associate</fullName>
            </value>
            <value>
                <fullName>Associate</fullName>
            </value>
            <value>
                <fullName>Scientific and Research</fullName>
            </value>
            <value>
                <fullName>Temporary</fullName>
            </value>
            <value>
                <fullName>Honorary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>