force-app/main/default/objects/Contact/fields/Practice_Type__c.field-meta.xml
<CustomField>
    <fullName>Practice_Type__c</fullName>
    <label>Practice Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clinical Scientist</fullName>
            </value>
            <value>
                <fullName>Dentist</fullName>
            </value>
            <value>
                <fullName>Maxillofacial Surgeon</fullName>
            </value>
            <value>
                <fullName>Physician</fullName>
            </value>
            <value>
                <fullName>Psychologist</fullName>
            </value>
            <value>
                <fullName>Scientific &amp; Research</fullName>
            </value>
            <value>
                <fullName>Midwife</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>