force-app/main/default/objects/Contact/fields/Provider_ID__c.field-meta.xml
<CustomField>
    <fullName>Provider_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Provider ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>