force-app/main/default/objects/Contact/fields/Skills__c.field-meta.xml
<CustomField>
    <fullName>Skills__c</fullName>
    <inlineHelpText>Select the valid competencies</inlineHelpText>
    <label>Competencies</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ER</fullName>
            </value>
            <value>
                <fullName>Critical Care</fullName>
            </value>
            <value>
                <fullName>IV Therapy</fullName>
            </value>
            <value>
                <fullName>Neonatal</fullName>
            </value>
            <value>
                <fullName>Perinatal</fullName>
            </value>
            <value>
                <fullName>Perioperative</fullName>
            </value>
            <value>
                <fullName>Nephrology/Dialysis</fullName>
            </value>
            <value>
                <fullName>CARE</fullName>
            </value>
            <value>
                <fullName>EPAC</fullName>
            </value>
            <value>
                <fullName>General GYN</fullName>
            </value>
            <value>
                <fullName>Obstetrics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>