force-app/main/default/objects/Contact/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>On Staff = available to work, Not Available = all future availability records will automatically be set to Not Available</description>
    <inlineHelpText>On Staff = available to work, Not Available = all future availability records will automatically be set to Not Available</inlineHelpText>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On staff</fullName>
            </value>
            <value>
                <fullName>Isolation - COVID symptoms/exposure</fullName>
                <label>Not Available</label>
            </value>
            <value>
                <fullName>COVID positive</fullName>
                <isActive>false</isActive>
                <label>COVID positive</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>