force-app/main/default/objects/Contact/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Role_Global__c</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>Skills__c</columns>
    <columns>Status__c</columns>
    <columns>CONTACT.EMAIL</columns>
    <filterScope>Everything</filterScope>
    <label>All Staff</label>
</ListView>