force-app/main/default/objects/Contact/listViews/Recently_Viewed_Staff.listView-meta.xml
<ListView>
    <fullName>Recently_Viewed_Staff</fullName>
    <columns>FULL_NAME</columns>
    <columns>PARENT.NAME</columns>
    <columns>Role_Global__c</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>Recently Viewed Staff</label>
</ListView>